fixed extra space at bottom of logo wrapper.

--- a/ask_life/assets/css/404.css
+++ b/ask_life/assets/css/404.css
@@ -30,6 +30,7 @@
 
 .header-main__logo {
   position: relative;
+  vertical-align: bottom;
   width: 50%;
 }
 
